--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,12 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
     implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
 
+    def work_version = "1.0.0-alpha06"
+    implementation "android.arch.work:work-runtime-ktx:$work_version"
+
+    def koin_version = '0.9.3'
+    implementation "org.koin:koin-android-architecture:$koin_version"
+
     //implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
 
