--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    def lifecycle_version = "2.0.0-beta01"
+    def lifecycle_version = "2.0.0-rc01"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
     def room_version = "2.0.0-beta01"
