--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,27 +28,28 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
 
-    def lifecycle_version = "2.0.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    //Android Jetpack
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
+
+    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha04'
 
     def room_version = "2.0.0-beta01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    def nav_version = "1.0.0-alpha04"
-    implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
+    implementation 'android.arch.work:work-runtime-ktx:1.0.0-alpha06'
 
-    def work_version = "1.0.0-alpha06"
-    implementation "android.arch.work:work-runtime-ktx:$work_version"
+    //DI
+    implementation 'org.koin:koin-android-architecture:0.9.3'
 
-    def koin_version = '0.9.3'
-    implementation "org.koin:koin-android-architecture:$koin_version"
-
-    //implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    //View
+    implementation 'com.google.android.material:material:1.0.0-alpha1'
+    implementation 'androidx.cardview:cardview:1.0.0-alpha1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
 
+    //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
