--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ android {
         enabled = true
     }
 }
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -40,6 +45,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation 'android.arch.work:work-runtime-ktx:1.0.0-alpha06'
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.24.0'
 
     //DI
     implementation 'org.koin:koin-android-architecture:0.9.3'
