--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-alpha1'
     implementation 'androidx.cardview:cardview:1.0.0-alpha1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'com.shawnlin:number-picker:2.4.6'
 
     //Test
     testImplementation 'junit:junit:4.12'
