--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,15 +32,15 @@ kotlin {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
 
     //Android Jetpack
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
 
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha04'
+    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha05'
 
-    def room_version = "2.0.0-beta01"
+    def room_version = "2.0.0-rc01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
@@ -53,8 +53,7 @@ dependencies {
     implementation 'org.koin:koin-android-architecture:0.9.3'
 
     //UI
-    implementation 'com.google.android.material:material:1.0.0-alpha1'
-    implementation 'androidx.cardview:cardview:1.0.0-alpha1'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'com.shawnlin:number-picker:2.4.6'
 
