--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     //Test
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.0.0-rc01'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 }
