--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,18 @@ kotlin {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 
     //Android Jetpack
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha05'
+    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha06'
 
     def room_version = "2.0.0-rc01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    implementation 'android.arch.work:work-runtime-ktx:1.0.0-alpha07'
+    implementation 'android.arch.work:work-runtime-ktx:1.0.0-alpha09'
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.24.0'
@@ -50,13 +50,13 @@ dependencies {
     implementation 'org.koin:koin-android-architecture:0.9.3'
 
     //UI
-    implementation 'com.google.android.material:material:1.0.0-rc01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.shawnlin:number-picker:2.4.6'
 
     //Test
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.arch.core:core-testing:2.0.0-rc01'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.0.0'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 }
