--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,11 @@ dependencies {
 
     implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha06'
 
-    def room_version = "2.0.0-rc01"
+    def room_version = "2.1.0-alpha01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    implementation 'android.arch.work:work-runtime-ktx:1.0.0-alpha09'
+    implementation 'android.arch.work:work-runtime-ktx:1.0.0-alpha10'
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.24.0'
@@ -57,6 +57,6 @@ dependencies {
     //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.arch.core:core-testing:2.0.0'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
 }
