--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,17 +47,26 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.24.0'
 
     //DI
-    implementation 'org.koin:koin-android:1.0.1'
-    implementation 'org.koin:koin-androidx-viewmodel:1.0.1'
+    def koin_version = "1.0.1"
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     //UI
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.shawnlin:number-picker:2.4.6'
 
-    //Test
+    //Testing
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.arch.core:core-testing:2.0.0'
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC3'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.23.0'
+
+    testImplementation 'androidx.arch.core:core-testing:2.0.0'
+    testImplementation "org.koin:koin-test:$koin_version"
+
     androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
 }
