--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,9 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.23.0'
     androidTestImplementation 'org.mockito:mockito-android:2.23.0'
 
-    testImplementation 'androidx.arch.core:core-testing:2.0.0'
     testImplementation "org.koin:koin-test:$koin_version"
+    testImplementation 'androidx.arch.core:core-testing:2.0.0'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.0.0'
 
     androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
